--- a/HTML/futureendevers.html
+++ b/HTML/futureendevers.html
@@ -50,7 +50,7 @@
                     <h3>10-15 years from now</h3>
                     <p>
                         In ten to fifteen years from now I will have either gone back to school and gotten my Masters or said I don't have the time and gone to work for my family.
-                        My family owns a manufactoring business in my hometown. With my experties I would like to try to 
+                        My family owns a manufactoring business in my hometown. With my experties I would like to try to update some of the processies that happen at the shop.
                     </p>
                 </div>
             </main>
