--- a/HTML/pastendevers.html
+++ b/HTML/pastendevers.html
@@ -57,7 +57,7 @@
                 <div>
                     <h3>Track</h3>
                     <p>
-                        Ran track in high school from my softmore year to my seinor year.
+                        Ran track in high school from my softmore year to my senior year.
                     </p>
                 </div>
             </main>
