--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -4,6 +4,12 @@
             <title>PlaceHolder</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                .floatright {
+                    margin: 10px;
+                    float: right
+                }
+            </style>
         </head>
         <body>
             <nav>
@@ -38,5 +44,15 @@
                     </div>
                 </div>
             </nav>
+            <main>
+                <div>
+                    <h3>Florida Keys</h3>
+                    <p>
+                        Over the summer of 2017, my family and I went on a vacation of the florida keys too get away and relax from our everyday lives.
+                        We where on vacation for about 2 weeks and did plenty of intresting things. One of these things was that I cought a shark.
+                    </p>
+                    <img src="Images/shark.jpg" alt="shark" class="floatright">
+                </div>
+            </main>
         </body>
     </html>
