--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -4,6 +4,11 @@
             <title>PlaceHolder</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                body {
+                    text-align: center;
+                }
+            </style>
         </head>
         <body>
             <nav>
@@ -38,7 +43,7 @@
                     </div>
                 </div>
             </nav>
-            <form style="text-align: center;">
+            <form style="text-align: center;" method="POST" action="https://formspree.io/dillonmlarson@gmail.com">
                     <h2>Vacation Suggestion</h2>
                     <label for="place">*Place:</label><br>
                     <input type="text" name="place" id="place" required="required"><br>
