--- a/HTML/hobbies.html
+++ b/HTML/hobbies.html
@@ -19,7 +19,7 @@
                     color: black;
                     padding: 50px 50px 50px 50px
                 }
-                tbody {
+                tbody td {
                     border-bottom: 1px black solid;
                     padding-left: 25px;
                 }
@@ -66,7 +66,7 @@
                     my home town. We have a list of games that we bounce between these include:
                     </p>
                     <table>
-                        <caption>Games I play</caption>
+                        <caption style="font-weight: bold;">Games I play</caption>
                             <thead>
                                 <tr>
                                     <th id="games">Games</th>
