--- a/HTML/musicsuggestion.html
+++ b/HTML/musicsuggestion.html
@@ -4,6 +4,11 @@
             <title>Music Suggestions</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                body {
+                    text-align: center;
+                }
+            </style>
         </head>
         <body>
             <nav>
@@ -38,7 +43,7 @@
                     </div>
                 </div>
             </nav>
-            <form style="text-align: center;">
+            <form style="text-align: center;" method="POST" action="https://formspree.io/dillonmlarson@gmail.com">
                 <h2>Music Suggestion</h2>
                 <label for="songtitle">*Song Title:</label>
                 <input type="text" name="songtitle" id="songtitle" required="required"><br>
