--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <div class="dropdown-content">
                         <a href="HTML/hobbies.html">Hobbies</a>
                         <a href="HTML/pastadventures.html">Adventures</a>
+                        <a href="HTML/vacation.html">Vacations</a>
                     </div>
                 </div>
                 <div class="dropdown">
