--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -51,7 +51,7 @@
                         Over the summer of 2017, my family and I went on a vacation of the florida keys too get away and relax from our everyday lives.
                         We where on vacation for about 2 weeks and did plenty of intresting things. One of these things was that I cought a shark.
                     </p>
-                    <img src="Images/shark.jpg" alt="shark" class="floatright">
+                    <img src="Images/shark.jpeg" alt="shark" class="floatright">
                 </div>
             </main>
         </body>
