--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -9,6 +9,9 @@
                     margin: 10px;
                     float: right
                 }
+                nav {
+                    float: right;
+                }
             </style>
         </head>
         <body>
