--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -10,16 +10,16 @@
                     float: right
                 }
                 nav {
-                    float: right;
+                    float: left;
                 }
             </style>
         </head>
         <body>
             <nav>
-                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button>
-                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button>
+                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button><br>
+                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button><br>
                 <div class="dropdown">
-                    <button class="dropbtn">About</button>
+                    <button class="dropbtn">About</button><br>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
                         <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
@@ -27,20 +27,20 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Education</button>
+                    <button class="dropbtn">Education</button><br>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/education.html">Education</a>
                         <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Future</button>
+                    <button class="dropbtn">Future</button><br>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Suggestions</button>
+                    <button class="dropbtn">Suggestions</button><br>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
                         <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
