--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                     background-image: url(Images/mybackground.jpg);
                     background-color: blue;
                     background-repeat: no-repeat;
-                    background-size: cover;
+                    background-size: auto;
                     font-family: Georgia, 'Times New Roman', Times;
                     font-size: 12pt;
                 }
