--- a/HTML/pastendevers.html
+++ b/HTML/pastendevers.html
@@ -40,7 +40,7 @@
             </nav>
             <main>
                 <h2>My Past Endevers</h2>
-                <div>
+                <div style="float: left">
                     <h3>Eagle Scout</h3>
                     <p>
                         I earned the rank of Eagle back in December of 2012. To earn the rank of Eagle you have to complete so many
@@ -54,7 +54,7 @@
                         Earned National Honors Society in high school for my academics.
                     </p>
                 </div>
-                <div>
+                <div style="float: right">
                     <h3>Track</h3>
                     <p>
                         Ran track in high school from my softmore year to my senior year.
