--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -18,29 +18,29 @@
             <nav>
                 <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button><br>
                 <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button><br>
-                <div class="dropdown">
-                    <button class="dropbtn">About</button><br>
+                <div class="dropdown"><br>
+                    <button class="dropbtn">About</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
                         <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
                         <a href="/475personalproject/HTML/vacation.html">Vacation</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Education</button><br>
+                <div class="dropdown"><br>
+                    <button class="dropbtn">Education</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/education.html">Education</a>
                         <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Future</button><br>
+                <div class="dropdown"><br>
+                    <button class="dropbtn">Future</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Suggestions</button><br>
+                <div class="dropdown"><br>
+                    <button class="dropbtn">Suggestions</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
                         <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
