--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -10,6 +10,9 @@
                     background-color: red;
                     background-image: linear-gradient(to left, red, white, red);
                 }
+                nav {
+                    float: left
+                }
             </style>
         </head>
         <body>
