--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>PlaceHolder</title>
+            <title>Vacations</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
             <style>
@@ -16,36 +16,36 @@
         </head>
         <body>
             <nav>
-                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button><br>
-                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button><br>
-                <div class="dropdown"><br>
+                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button><br><br>
+                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button><br><br>
+                <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/hobbies.html">Hobbies</a>
                         <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
                         <a href="/475personalproject/HTML/vacation.html">Vacation</a>
                     </div>
-                </div>
-                <div class="dropdown"><br>
+                </div><br><br>
+                <div class="dropdown">
                     <button class="dropbtn">Education</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/education.html">Education</a>
                         <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
                     </div>
-                </div>
-                <div class="dropdown"><br>
+                </div><br><br>
+                <div class="dropdown">
                     <button class="dropbtn">Future</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
                     </div>
-                </div>
-                <div class="dropdown"><br>
+                </div><br><br>
+                <div class="dropdown">
                     <button class="dropbtn">Suggestions</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
                         <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
                     </div>
-                </div>
+                </div><br>
             </nav>
             <main>
                 <div>
