--- a/HTML/pastendevers.html
+++ b/HTML/pastendevers.html
@@ -4,11 +4,16 @@
             <title>Dillon's Past Adventure</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                nav {
+                    float: left;
+                }
+            </style>
         </head>
         <body>
             <nav>
-                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button>
-                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button>
+                <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button><br><br>
+                <button class="dropbtn"><a href="/475personalproject/HTML/resume.html">Resume</a></button><br><br>
                 <div class="dropdown">
                     <button class="dropbtn">About</button>
                     <div class="dropdown-content">
@@ -16,27 +21,27 @@
                         <a href="/475personalproject/HTML/pastendevers.html">Past Endevers</a>
                         <a href="/475personalproject/HTML/vacation.html">Vacation</a>
                     </div>
-                </div>
+                </div><br><br>
                 <div class="dropdown">
                     <button class="dropbtn">Education</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/education.html">Education</a>
                         <a href="/475personalproject/HTML/niuprojects.html">NIU Projects</a>
                     </div>
-                </div>
+                </div><br><br>
                 <div class="dropdown">
                     <button class="dropbtn">Future</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/futureendevers.html">Future Endevers</a>
                     </div>
-                </div>
+                </div><br><br>
                 <div class="dropdown">
                     <button class="dropbtn">Suggestions</button>
                     <div class="dropdown-content">
                         <a href="/475personalproject/HTML/musicsuggestion.html">Music Suggestion</a>
                         <a href="/475personalproject/HTML/vacationsug.html">Vacation Suggestion</a>
                     </div>
-                </div>
+                </div><br><br>
             </nav>
             <main>
                 <h2>My Past Endevers</h2>
