--- a/HTML/futureendevers.html
+++ b/HTML/futureendevers.html
@@ -55,4 +55,5 @@
                 </div>
             </main>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
