--- a/HTML/vacationsug.html
+++ b/HTML/vacationsug.html
@@ -54,4 +54,5 @@
                     required="required" maxlength="1600"></textarea>
             </form>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
