--- a/HTML/education.html
+++ b/HTML/education.html
@@ -4,7 +4,15 @@
             <title>Dillon's Education</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <style>
+                header {
+                    background-image:url(475personalproject/Images/niubuisness.jpg)
+                }
+            </style>
         </head>
+        <header role="banner">
+            <h1>Education</h1>
+        </header>
         <body>
             <nav>
                 <button class="dropbtn"><a href="/475personalproject/index.html">Home</a></button>
@@ -59,4 +67,5 @@
                 </p>
             </div>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
