--- a/HTML/musicsuggestion.html
+++ b/HTML/musicsuggestion.html
@@ -53,4 +53,5 @@
                 <input type="text" name="album" id="artist" required="required">
             </form>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
