--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -62,4 +62,5 @@
                 </p>
             </div>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
