--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -43,7 +43,7 @@
                     <h2>Dillon Larson</h2>
                     <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
                     <p>(815)-590-2023</p>
-                    <p><a href="mailto:dillonmlarson@gmail.com">dillonmlarson@gmail.com</a></p>
+                    <p><a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></p>
                 </div>
                 <div>
                     <h2>Employment</h2>
@@ -123,4 +123,5 @@
                 </div>
             </main>
         </body>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
