--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@
                 </div>
             </nav>
         </body>
-        <footer></footer>
+        <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com">dillonmlarson@gmail.com</a></footer>
     </html>
