--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Education</button>
                     <div class="dropdown-content">
-                        <a href="HTML/Education.html">Education</a>
+                        <a href="HTML/education.html">Education</a>
                         <a href="HTML/niuprojects.html">NIU Projects</a>
                     </div>
                 </div>
