--- a/HTML/education.html
+++ b/HTML/education.html
@@ -6,7 +6,9 @@
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
             <style>
                 header {
-                    background-image:url(475personalproject/Images/niubuisness.jpg)
+                    background-image:url(/475personalproject/Images/niubuisness.jpg);
+                    background-position: bottom;
+                    background-repeat: no-repeat;
                 }
             </style>
         </head>
