--- a/HTML/education.html
+++ b/HTML/education.html
@@ -9,6 +9,8 @@
                     background-image:url(/475personalproject/Images/niubuisness.jpg);
                     background-position: bottom;
                     background-repeat: no-repeat;
+                    height: 120px;
+                    padding: 0 20px;
                 }
             </style>
         </head>
