--- a/HTML/vacation.html
+++ b/HTML/vacation.html
@@ -4,6 +4,7 @@
             <title>Vacations</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 .floatright {
                     margin: 10px;
