--- a/HTML/education.html
+++ b/HTML/education.html
@@ -4,6 +4,7 @@
             <title>Dillon's Education</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 header {
                     background-image:url(/475personalproject/Images/niubuisness.jpg);
