--- a/HTML/futureendevers.html
+++ b/HTML/futureendevers.html
@@ -4,6 +4,7 @@
             <title>Future Endevers</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
         </head>
         <body>
             <nav>
