--- a/HTML/musicsuggestion.html
+++ b/HTML/musicsuggestion.html
@@ -4,6 +4,7 @@
             <title>Music Suggestions</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 body {
                     text-align: center;
