--- a/HTML/niuprojects.html
+++ b/HTML/niuprojects.html
@@ -4,6 +4,7 @@
             <title>NIU Projects</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 body {
                     height: 200px;
