--- a/HTML/pastendevers.html
+++ b/HTML/pastendevers.html
@@ -4,6 +4,7 @@
             <title>Dillon's Past Adventure</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css">
             <style>
                 nav {
                     float: left;
