--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -3,7 +3,13 @@
         <head>
             <title>Resume</title>
             <meta charset="utf-8">
-            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css">
+            <link rel="stylesheet" href="/475personalproject/CSS/dropdown.css" type="css" media="print">
+            <link rel="stylesheet" href="/475personalproject/CSS/homepage.css"type="css" media="print">
+            <script>
+                function myPrint() {
+                    window.print();
+                }
+            </script>
         </head>
         <body>
             <nav>
@@ -38,7 +44,7 @@
                     </div>
                 </div>
             </nav>
-            <main>
+            <main id="content">
                 <div>
                     <h2>Dillon Larson</h2>
                     <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
@@ -122,6 +128,11 @@
                         </ul>
                 </div>
             </main>
-        </body>
+            <div>
+                <a href="#content">Back to Top.</a>
+            </div><br>
+            <button value="Print" id="print" onclick="myPrint()">Print</button><br>
+            
+        </body><br>
         <footer>Dillon Larson &nbsp; <a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></footer>
     </html>
