--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -47,7 +47,7 @@
             <main id="content">
                 <div>
                     <h2>Dillon Larson</h2>
-                    <p>1304 6th Ave, Rock Falls, IL 61071</p><br>
+                    <p>1304 6th Ave, Rock Falls, IL 61071</p>
                     <p>(815)-590-2023</p>
                     <p><a href="mailto:dillonmlarson@gmail.com" style="color:black;">dillonmlarson@gmail.com</a></p>
                 </div>
